force-app/main/default/objects/leaseworks__MR_Comps_Filter__c/leaseworks__MR_Comps_Filter__c.object-meta.xml
<CustomObject>
    <label>MR Comps Filter</label>
    <nameField>
        <label>MR Comps Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MR Comps Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>