force-app/main/default/objects/leaseworks__MR_Comps_Filter__c/fields/leaseworks__Engine_Template__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Template__c</fullName>
    <label>Engine Template</label>
    <length>50</length>
    <type>Text</type>
</CustomField>