force-app/main/default/objects/leaseworks__MR_Comps_Filter__c/fields/leaseworks__FH_FC_Ratio__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__FH_FC_Ratio__c</fullName>
    <label>FH:FC Ratio</label>
    <length>40</length>
    <type>Text</type>
</CustomField>