force-app/main/default/objects/leaseworks__MR_Comps_Filter__c/fields/leaseworks__LG_Model__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LG_Model__c</fullName>
    <label>LG Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>