force-app/main/default/objects/leaseworks__MR_Comps_Filter__c/fields/leaseworks__LLP_Buildup__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LLP_Buildup__c</fullName>
    <label>LLP Buildup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>