force-app/main/default/objects/leaseworks__MR_Comps_Filter__c/fields/leaseworks__Maintenance_Program__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance Program</label>
    <referenceTo>leaseworks__Maintenance_Program__c</referenceTo>
    <relationshipLabel>MR Comps Filters</relationshipLabel>
    <relationshipName>MR_Comps_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>